--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,15 @@ body{
 }
 
 .mission-statement {
-  font-size: 20px;
+  font-size: 19px;
   font-weight: bolder;
+}
+
+.fa {
+  background: linear-gradient(to bottom, #f0b7a1 0%,#8c3310 50%,#752201 51%,#bf6e4e 100%);
+  border-radius: 30px;
+  box-shadow: 0 0 2px black;
+  padding: 5px;
+  width: 58px;
+  height: 58px;
 }
